--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -971,18 +971,18 @@ jobs:
       NODE_VERBOSE: true
       SSH_KEY_NETLIFY: ${{ secrets.SSH_KEY_NETLIFY }}
       SSH_KEY_NETLIFY_GITHUB_NETXJS_CACHING: ${{ secrets.SSH_KEY_NETLIFY_GITHUB_NETXJS_CACHING }}
-      GCP_FUNCTIONS_PROJECT: ${{ secrets.GCP_FUNCTIONS_PROJECT }}
-      GCP_FUNCTIONS_ACCOUNT: ${{ secrets.GCP_FUNCTIONS_ACCOUNT }}
+      GCP_FUNCTIONS_PROJECT: ${{ vars.GCP_FUNCTIONS_PROJECT }}
+      GCP_FUNCTIONS_ACCOUNT: ${{ vars.GCP_FUNCTIONS_ACCOUNT }}
       GCP_FUNCTIONS_SECRET: ${{ secrets.GCP_FUNCTIONS_SECRET }}
       NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-      NETLIFY_SITE_ID: '0e18c305-ea0f-4ba2-b174-372317df2b6a'
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      NETLIFY_SITE_ID: ${{ vars.NETLIFY_SITE_ID }}
+      AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ROLE: 'arn:aws:iam::275927176912:role/prisma-e2e-all'
-      AZURE_SP_TENANT: '708e49af-cc04-4c4e-9953-42faddae1f60'
+      AWS_ROLE: ${{ vars.AWS_ROLE }}
+      AZURE_SP_TENANT: ${{ vars.AZURE_SP_TENANT }}
       AZURE_SP_PASSWORD: ${{ secrets.AZURE_SP_PASSWORD }}
-      AZURE_SP_NAME: 'http://Functions'
+      AZURE_SP_NAME: ${{ vars.AZURE_SP_NAME }}
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
     steps:
@@ -1059,17 +1059,17 @@ jobs:
       NODE_MODULES_CACHE: false
       NODE_VERBOSE: true
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      VERCEL_ORG_ID: 'team_MXy0Vb3hQWVaTbAldoilc5x5'
-      VERCEL_API_PROJECT_ID: 'QmQPkzogMCbhysdCwbBqFZingRSctZMCPd1BQWF1sdLgPA'
-      VERCEL_API_BINARY_PROJECT_ID: 'prj_7RH5Wq0Vfnac13IhYNqicX4nKUlw'
-      VERCEL_NODE_BUILDER_PROJECT_ID: 'QmaE9hRd1MDV8QvBWNVg35WXyiuZgV2rSp9mYtK7qSBDJK'
-      VERCEL_NODE_BUILDER_BINARY_PROJECT_ID: 'prj_vipUSkkg2UUxAnQUlPcaGMaoDTdV'
-      VERCEL_WITH_REDWOOD_PROJECT_ID: 'Qmak89dJwPFatU917noowL6kh6PsAeB6MV7eKGdUBy9Xon'
-      VERCEL_WITH_REDWOOD_BINARY_PROJECT_ID: 'prj_I1oqa9ql6noOa1vFyaoyXMXWFnJG'
-      VERCEL_WITH_NEXTJS_PROJECT_ID: 'QmbqGJFcFC7w6BzhS546nUHDEAugEq7y4SKPPrEUC2Po8F'
-      VERCEL_WITH_NEXTJS_BINARY_PROJECT_ID: 'prj_RREEjoTDSDL7q88tTBZQ4bQ8oo0q'
-      VERCEL_WITH_NEXTJS_CACHING_PROJECT_ID: 'prj_DHLB9K2bGEZSeBXjs7d55glPtpwZ'
-      VERCEL_WITH_NEXTJS_CACHING_BINARY_PROJECT_ID: 'prj_0UUGt8AvGy3UKC9ns1eC6ydIjkOM'
+      VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
+      VERCEL_API_PROJECT_ID: ${{ vars.VERCEL_API_PROJECT_ID }}
+      VERCEL_API_BINARY_PROJECT_ID: ${{ vars.VERCEL_API_BINARY_PROJECT_ID }}
+      VERCEL_NODE_BUILDER_PROJECT_ID: ${{ vars.VERCEL_NODE_BUILDER_PROJECT_ID }}
+      VERCEL_NODE_BUILDER_BINARY_PROJECT_ID: ${{ vars.VERCEL_NODE_BUILDER_BINARY_PROJECT_ID }}
+      VERCEL_WITH_REDWOOD_PROJECT_ID: ${{ vars.VERCEL_WITH_REDWOOD_PROJECT_ID }}
+      VERCEL_WITH_REDWOOD_BINARY_PROJECT_ID: ${{ vars.VERCEL_WITH_REDWOOD_BINARY_PROJECT_ID }}
+      VERCEL_WITH_NEXTJS_PROJECT_ID: ${{ vars.VERCEL_WITH_NEXTJS_PROJECT_ID }}
+      VERCEL_WITH_NEXTJS_BINARY_PROJECT_ID: ${{ vars.VERCEL_WITH_NEXTJS_BINARY_PROJECT_ID }}
+      VERCEL_WITH_NEXTJS_CACHING_PROJECT_ID: ${{ vars.VERCEL_WITH_NEXTJS_CACHING_PROJECT_ID }}
+      VERCEL_WITH_NEXTJS_CACHING_BINARY_PROJECT_ID: ${{ vars.VERCEL_WITH_NEXTJS_CACHING_BINARY_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
@@ -1147,20 +1147,20 @@ jobs:
       NODE_MODULES_CACHE: false
       NODE_VERBOSE: true
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      VERCEL_ORG_ID: 'team_MXy0Vb3hQWVaTbAldoilc5x5'
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
+      AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ROLE: 'arn:aws:iam::275927176912:role/prisma-e2e-all'
+      AWS_ROLE: ${{ vars.AWS_ROLE }}
       DRIVER_ADAPTERS_NEON_LAMBDA_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_LAMBDA_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_NODE_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_NODE_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_DATABASE_URL }}
-      DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PROJECT_ID: 'prj_Yy3IbCMfMQ02dzjReqhBK3o0c26j'
+      DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PROJECT_ID }}
       DRIVER_ADAPTERS_PLANETSCALE_LAMBDA_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_LAMBDA_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_NODE_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_NODE_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_DATABASE_URL }}
-      DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID: 'prj_MD0B2OeM2h6Os8LMVlOXh6O6Qnpc'
-      DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID: 'prj_QA98r9SiYxV8XE7ZnJE7TX2utk5B'
+      DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID }}
+      DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID }}
       DEBUG: 'prisma:js-connector*'
 
     steps:
@@ -1236,11 +1236,12 @@ jobs:
       NODE_MODULES_CACHE: false
       NODE_VERBOSE: true
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      VERCEL_ORG_ID: 'team_MXy0Vb3hQWVaTbAldoilc5x5'
+      VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
+      # TODO change to vars below
       CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      DATAPROXY_VERCEL_EDGE_FUNCTIONS_PROJECT_ID: 'prj_smrNsB3FyxIHEUh0ihkUIIcogHdD'
-      DATAPROXY_VERCEL_CLI_SERVERLESS_FUNCTIONS_PROJECT_ID: 'prj_SLvfKJ7pzrYQSWNERls0H1TwJQjF'
+      DATAPROXY_VERCEL_EDGE_FUNCTIONS_PROJECT_ID: ${{ vars.DATAPROXY_VERCEL_EDGE_FUNCTIONS_PROJECT_ID  }}
+      DATAPROXY_VERCEL_CLI_SERVERLESS_FUNCTIONS_PROJECT_ID: ${{ vars.DATAPROXY_VERCEL_CLI_SERVERLESS_FUNCTIONS_PROJECT_ID  }}
 
     steps:
       - uses: actions/checkout@v4
