--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1231,13 +1231,13 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
-      # - name: Set test specific DATABASE_URL
-      #   run: |
-      #     string=${{ env.DATABASE_URL_POSTGRES_TEMPLATE }}
-      #     search=database
-      #     replace=${{ github.job }}_${{ matrix.combo }}_${{ matrix.os }}
-      #     replaced=${string/$search/$replace}
-      #     echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
+      - name: Set test specific DATABASE_URL
+        run: |
+          string=${{ env.DATABASE_URL_POSTGRES_TEMPLATE }}
+          search=database
+          replace=${{ github.job }}_${{ matrix.combo }}_${{ matrix.os }}
+          replaced=${string/$search/$replace}
+          echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
 
       - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }}
         id: run-test
