--- a/renovate.json
+++ b/renovate.json
@@ -15,12 +15,12 @@
   "packageRules": [
     {
       "groupName": ["Prisma Driver Adapters"],
-      "matchPackagePatterns": "@prisma/*adapter*",
+      "matchPackagePatterns": ["@prisma/.*adapter.*"],
       "schedule": ["at any time"]
     },
     {
       "groupName": ["svelte packages"],
-      "matchPackagePatterns": "svelte"
+      "matchPackagePatterns": ["svelte"]
     },
     {
       "groupName": ["sveltekit directory"],
@@ -28,7 +28,7 @@
     },
     {
       "groupName": ["@redwoodjs packages"],
-      "matchPackagePatterns": "^@redwoodjs"
+      "matchPackagePatterns": ["^@redwoodjs"]
     },
     {
       "groupName": "aws-sdk",
