--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,7 @@
     {
       "groupName": ["Prisma Driver Adapters"],
       "matchPackageNames": ["@prisma/driver-adapter-utils"],
-      "matchPackagePatterns": ["^@prisma/adapter"],
+      "matchPackagePrefixes": ["@prisma/adapter"],
       "schedule": ["at any time"]
     },
     {
